--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795844.md#1" target="_blank">麦立：忘忧森林一隅</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/mily-0116-150x120.jpg" align ="left"></a> 我们 曾 一起努力长大 曾 一起迎接风雨 也曾   一起 与风共舞 沙沙共语......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740761.md#1" target="_blank">“轮回之说”何处来？古老中国的轮回观</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1901111221442483-150x120.jpg" align ="left"></a>茫茫宇宙，浩瀚无际。六合之中，奇闻异事之多，也难以记述。单就生命的轮回话题，从古至今探索不尽。日有东升西落，四季有轮回交替，十二时辰循环相继，就包括人的生命从生老病死，再到生老病死，从古至今，延续不断，繁衍不息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11784336.md#1" target="_blank">情味香港</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11784336.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_120152389-1-150x120.jpg" align ="left"></a>街边吃煎酿三宝车仔面碗仔翅狗仔粉西多士，仍是昔时滋味，油尖旺金鱼街在透明塑胶袋里优游的彩色小鱼……但我知道，这里，既是一样，又是不一样，变与不变本就是时空的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754661.md#1" target="_blank">鼠年话鼠：皇室之宝和阗玉鼠 失而妙得</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/72f372a7cbcaf4eea934d160de5c8ce6-150x120.jpg" align ="left"></a>鼠年话鼠。清朝时，在浙江嘉禾有一位姓张的小骨董买客，起初，他每天拿着数百钱，跟在卖糖人的后边，去到静僻小巷之中寻宝。他有一次奇遇，买到了一只玉鼠让他翻了身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:30 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11801523.md#1" target="_blank">谈皇帝与土匪的根本差别</a><br></h3>在近百年中西文化的交往中，由于双方深刻的习俗差异，有些西方人，尤其美国人对于中国共产党却比较同情和容忍；同时对于其鼓吹的无神论却必然蜕变为伪神论的倾向常常视而不见。因为现代西方国家也盛行科学至上，理性至上，以及由此产生的无神论思潮蔓延；这些思潮与前者并没有根本的区别和界限。而且在开始中共总是笑脸相迎，说在中国的投资有利.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11801214.md#1" target="_blank">一七令．红楼梦</a><br></h3> 春。 五彩，霞云。 甄士隐，贾雨村。 红楼梦境，石头记存。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795826.md#1" target="_blank">七绝：有感</a><br></h3>山水琴觞怆泣诗， 摧心慨叹为相知。 会当了悟因缘事， 天宇澄明梦尽时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798518.md#1" target="_blank">歌词：法光照我暖心窝</a><br></h3>法光照，暖心窝，
