--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11801506.md#1">颜丹：中国人何时不再当中共的人质？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800656.md#1">陈思敏：京沪高铁不缺钱为何还要上市</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799892.md#1">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798400.md#1">中华民国台湾 ：民主进程看过来</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797632.md#1">宋善：庆贺三亿五千万人退党</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796990.md#1">袁斌：有感于“伊朗央视”知名主播愤然辞职</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
