--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783661.md#1" target="_blank">【拍案惊奇】台湾大选 分享5个忠告</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e8b19f86dcd6e8_ttl7daylaK___tn0110-150x120.jpg" align ="left"></a>我对台湾大选，第一个要说的就是，台湾的朋友，请你出去投票！这是我们作为关心台湾的局外人，你们最容易帮我们做到的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782470.md#1" target="_blank">蔡正元遭控利诱王立强 蔡竞办：国民党应说清楚</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/347e8d89cdd46ec3e5d74bc3cfb5dbeb-150x120.jpg" align ="left"></a>澳洲媒体报导，国民党副秘书长蔡正元、中国商人孙天疑似威胁利诱共谍王立强，要求其翻供反咬民进党，不然将被杀害。总统蔡英文竞选办公室10日召开记者会，批评整起事件是国共势力联手合作介入大选，并呼吁蔡正元及国民党要说清楚，为何蔡正元可以做出涉及国家公权力的承诺？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 1:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781535.md#1" target="_blank">中国制车厢门质量不合格 纽约MTA换下300个</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781535.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/183B7197-150x120.jpg" align ="left"></a>纽约地铁上的广播员天天告诉乘客：不要靠在车门上。从昨天的一个报导看，这个行为真可能是很危险的：大都会捷运署MTA一夜之间换掉了300个车厢门，就怕出人命。究其源头，原来车门是中国南京康尼机电股份有限公司（Nanjing Kangni Mechanical & Electrical Co.Ltd，以下简称南京康尼）的产品，其中还涉及到一个买中国产品的加拿大车厢.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 10:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781010.md#1" target="_blank">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200110666-150x120.jpg" align ="left"></a>今天一开始，我们先来关注德黑兰波音坠机事件，最新消息很惊人，却也符合不少人的预期，美国官员很确信地说：飞机是被伊朗导弹打下去的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 5:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11791752.md#1" target="_blank">每日三退声明精选（2020/01/13）</a><br></h3>现在的中国，共产党高官糜烂腐败，无官不贪。好的、正的东西得不到肯定和弘扬，坏人、黑恶势力却大行其道，真的没治了。我非常认同法轮大法弟子告诉我的话：以真善忍为修炼准则的法轮大法是宇宙中的高德大法，世界都需要。我对这些有所了解；共产主义的最终目的就是消灭所有对神的信仰以至全人类，我们平民百姓唯有退出共产党的党、团、队组织，抹去被西来共产魔教打上的印记，不与它为伍.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790555.md#1" target="_blank">台作家：绿营执政首要任务“消灭红色渗透”</a><br></h3>专栏作家“王立第二战研所”13日PO出“2020选后杂谈”文章，分析民进党胜利三大因素，并指出，800万票证明人民“反共匪侵略”，一遇国家主权危机，民进党保守派以台湾优先，其他再说，“所以，完全执政首要任务，必须是消灭红色渗透”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790482.md#1" target="_blank">还能承袭经国精神？柯志恩：国民党距民意太远</a><br></h3>国民党深陷败选阴霾，挑战新北第7选区失利的立委柯志恩13日在脸书发文，质疑“国民党还能承袭经国先生的精神吗?”她说，选举已是世代而非统独之争，经国先生“反共不反中”，捍卫民主自由价值，反观今日国民党，无论是路线论述或政策辩护，模糊、虚弱无力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11789981.md#1" target="_blank">女孩写不出作文急哭：天天“学习”哪有缤纷世界</a><br></h3>近日，黑龙江双鸭山市民李先生上小学的女儿因写不出命题作文《我眼中的缤纷世界》而放声大哭。她哭诉：“天天学习，哪有缤纷世界。”李先生说，后来想了想很心疼孩子，于是将给孩子报的两门假期补习班取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:14 PM							</td></tr>
