--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,7 +9,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801573.md#1">周晓辉：川普下紧箍咒 中南海解除只有一条路</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801852.md#1">《协议》签订后的“小道消息”</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801506.md#1">颜丹：中国人何时不再当中共的人质？</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800656.md#1">陈思敏：京沪高铁不缺钱为何还要上市</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
@@ -34,6 +34,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801609.md#1">高校将推“强基计划” 学者：维持中共统治</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801399.md#1">专家：中共被迫与美签约 习近平最好不在场</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801598.md#1">贸易协议签署后 官媒热捧空姐炫富开车游故宫</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801573.md#1">周晓辉：川普下紧箍咒 中南海解除只有一条路</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播预告】纽约举行“恭喜制裁大游行”</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801522.md#1">“一带一路”企业再爆雷  半年违约60亿</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800824.md#1">台湾大选 薛瑞福：对中国人民的启发</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801511.md#1">台专家完成武汉疫情查访 揭两起家庭群聚感染</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801248.md#1">中美签协议 北京异乎寻常低调 川普高调</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801324.md#1">短视频：16年瘫痪 她终于站起来了</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798734.md#1">习近平两次避见川普的内幕</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1">【武汉肺炎疫情 | 持续更新】出现第2例死亡 日本泰国都现病例 疫情疑遭隐瞒</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801405.md#1">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801540.md#1">制片人爆大陆限薪令：头部演员片酬降九成</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,023,748 人
+- 共 350,028,413 人
 ```
 </strong>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
