--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -37,7 +37,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801399.md#1">专家：中共被迫与美签约 习近平最好不在场</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801598.md#1">贸易协议签署后 官媒热捧空姐炫富开车游故宫</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801573.md#1">周晓辉：川普下紧箍咒 中南海解除只有一条路</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播预告】纽约举行“恭喜制裁大游行”</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播预告】纽约港人集会游行吁制裁中共</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801522.md#1">“一带一路”企业再爆雷  半年违约60亿</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800824.md#1">台湾大选 薛瑞福：对中国人民的启发</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801506.md#1">颜丹：中国人何时不再当中共的人质？</a><br>
