--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -32,7 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801450.md#1">【新闻看点】6因素 北京接受川普惩罚性关税</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802036.md#1">【翻墙必看】中共权力更替的最大死穴</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802036.md#1">【翻墙必看】接班人问题是中共权力更替的死穴</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800810.md#1">台湾大选反共潮高涨 鼓舞中港人民争自由</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801695.md#1">大陆明星饮品下架 天喔国际停牌16个月</a><br>
