--- a/gb/ncid278_5.md
+++ b/gb/ncid278_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/20/n11734006.md#1" target="_blank">【拍案惊奇】抗争风悄然北上 香港星火被盯上</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/20/n11734006.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1f0b4deba791e_ttl7dayDRH_tn1-FB__-150x120.jpg" align ="left"></a>先要讲到的是，最近大陆发生的两件事，证明反送中这个香港式的抗争风潮，已经悄然吹进大陆。一件发生在大学“复旦”，另一件，发生在广东小镇“播扬”，这两个地方的名字就很有内涵。但与此同时呢，香港资金援助抗争者的“星火同盟”出事了，有4个相关的人被逮捕，“星火同盟”背后的支持者，大多是“和理非”抗争人士，人们担心，这些和理非的个人信息会被警方掌握。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank">英国上议院会议 医生斥港警对救援人员施暴</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-150x120.jpeg" align ="left"></a>12月18日下午，由“香港监察”（Hong Kong Watch）赞助人、英国利物浦奥尔顿勋爵（Lord Alton of Liverpool）在英国上议院举行会议上，听取在英国医生讲述港府侵犯医护人员等违背国际原则的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank">沈阳研究生遭同学砍断肌腱 报案3个月无果</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/222-150x120.jpg" align ="left"></a>因奖学金评定发生矛盾，沈阳大学一名在读硕士研究生遭多名同学捅伤，大腿肌腱被砍断，报案三个月无果，痛苦中无奈到网上发帖爆光，引发舆情关注后，警方方回应称正在抓捕犯罪嫌疑人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/18/n11730975.md#1" target="_blank">德国政要支持民众《人权问责法》在线请愿</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/18/n11730975.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PfMd-150x120.jpeg" align ="left"></a>12月1日至30日，德国民众发起在线征签活动，敦促德国议会通过《全球马格尼茨基人权问责法案》。德国国会议员乌莉?尼森（Ulli Nissen）女士力挺该请愿并呼吁民众签名支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/23/n11740664.md#1" target="_blank">法轮功学员孙凤华遭绑架命危 数月后离世</a><br></h3>哈尔滨市法轮功学员孙凤华于9月11日被哈尔滨市铁路公安局直属派出所警察绑架，当时血压高达240，出现生命危险。第二天警察通知家属把她接走。回家3个月后，她于12月9日离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/22/n11738747.md#1" target="_blank">密山市委前副书记李连春回国投案 被起诉</a><br></h3>近日，中共媒体报导，2019年9月24日，外逃职务犯罪嫌疑人李连春主动回国投案，并已退出大部分贪污所得赃款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/22/n11738464.md#1" target="_blank">内蒙古赤峰至少31名法轮功学员身陷囹圄</a><br></h3>2019年年末，赤峰地区至少有30名法轮功学员被非法关押在内蒙古赤峰第四监狱和内蒙古呼市女子监狱遭受迫害，还有一人不知被转到哪所监狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
