--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802040.md#1">袁斌：中美贸易战，中共认怂的谜底在这里</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801869.md#1">吴惠林：导读 从历史学习，“天堂”操之在己</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801852.md#1">骆克仁:《协议》签订后的“小道消息”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798996.md#1">【名家专栏】工资与战争：中俄军费被低估</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798907.md#1">王赫：2019中共政局 赶制家法 内斗诡异</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798679.md#1">王友群：2020中国会不会传染病大爆发</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798779.md#1">夏小强：国民党的迷途困境和未来出路</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,8 +30,8 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802036.md#1">【翻墙必看】接班人问题是中共权力更替的死穴</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801450.md#1">【新闻看点】6因素 北京接受川普惩罚性关税</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802036.md#1">【翻墙必看】接班人问题是中共权力更替的死穴</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802063.md#1">【拍案惊奇】救吴花燕钱无踪 港警贴连侬被捕</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
